# WinCairoRequirements

./: .gitignore  README  WinCairo.sln  WinCairo.vcxproj  WinCairo_vc8.sln  WinCairo_vc9.sln  index.html
include/: .MySCMServerInfo
src/cairo/cairo/: .MySCMServerInfo  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  autogen.sh  cairo-version.h  configure  configure.ac
src/cairo/cairo/boilerplate/: .MySCMServerInfo  Makefile.am  Makefile.in  Makefile.sources  Makefile.win32.features  cairo-boilerplate-beos.cpp  cairo-boilerplate-directfb.c  cairo-boilerplate-drm.c  cairo-boilerplate-getopt.c  cairo-boilerplate-gl.c  cairo-boilerplate-glitz-agl.c  cairo-boilerplate-glitz-glx.c  cairo-boilerplate-glitz-wgl.c  cairo-boilerplate-glx.c  cairo-boilerplate-pdf.c  cairo-boilerplate-private.h  cairo-boilerplate-ps.c  cairo-boilerplate-qt.cpp  cairo-boilerplate-quartz.c  cairo-boilerplate-script.c  cairo-boilerplate-skia.c  cairo-boilerplate-svg.c  cairo-boilerplate-system.c  cairo-boilerplate-system.h  cairo-boilerplate-test-surfaces.c  cairo-boilerplate-vg.c  cairo-boilerplate-win32-printing.c  cairo-boilerplate-win32.c  cairo-boilerplate-xcb.c  cairo-boilerplate-xlib.c  cairo-boilerplate.c  cairo-boilerplate.h
src/cairo/cairo/doc/: .MySCMServerInfo  Makefile.in
src/cairo/cairo/perf/: .MySCMServerInfo  Makefile.am  Makefile.in  README  cairo-perf-chart.c  cairo-perf-compare-backends.c  cairo-perf-diff  cairo-perf-diff-files.c  cairo-perf-graph  cairo-perf-graph-files.c  cairo-perf-graph-widget.c  cairo-perf-micro.c  cairo-perf-posix.c  cairo-perf-print.c  cairo-perf-report.c  cairo-perf-trace.c  cairo-perf.h  make-html.py
src/cairo/cairo/src/: .MySCMServerInfo  Makefile.sources  Makefile.win32.features  cairo-atomic-private.h  cairo-beos-surface.cpp  cairo-box-inline.h  cairo-eagle-context.c  cairo-egl-context.c  cairo-features.h  cairo-gl-composite.c  cairo-gl-device.c  cairo-gl-glyphs.c  cairo-gl-msaa-compositor.c  cairo-gl-operand.c  cairo-gl-private.h  cairo-gl-shaders.c  cairo-gl-spans-compositor.c  cairo-gl-surface.c  cairo-gl-traps-compositor.c  cairo-glitz-private.h  cairo-glitz-surface.c  cairo-glitz.h  cairo-glx-context.c  cairo-gstate.c  cairo-image-compositor.c  cairo-meta-surface-private.h  cairo-meta-surface.c  cairo-mutex-impl-private.h  cairo-path-fixed.c  cairo-pattern.c  cairo-pdf-surface.c  cairo-quartz-font.c  cairo-quartz-surface.c  cairo-scaled-font.c  cairo-spans-compositor.c  cairo-surface-fallback.c  cairo-surface-observer-private.h  cairo-surface-observer.c  cairo-surface.c  cairo-wgl-context.c  (+15 more)
src/cairo/cairo/test/: .MySCMServerInfo  Makefile.am  Makefile.in  Makefile.sources  README  a1-mask.c  any2ppm.c  bilevel-image.c  bitmap-font.c  buffer-diff.c  cairo-test-constructors.c  cairo-test-runner.c  cairo-test-trace.c  cairo-test.c  cairo-test.h  clip-all.c  clip-empty.c  clip-fill-unbounded.c  clip-image.c  clip-operator.c  clip-stroke-unbounded.c  clipped-trapezoids.c  copy-path.c  dash-infinite-loop.c  fallback-resolution.c  filter-nearest-offset.c  font-face-get-type.c  font-matrix-translation.c  ft-show-glyphs-positioning.c  ft-show-glyphs-table.c  ft-text-antialias-none.c  ft-text-vertical-layout-type3.c  get-clip.c  get-path-extents.c  glitz-surface-source.c  glyph-cache-pressure.c  in-fill-empty-trapezoid.c  large-font.c  large-source.c  mask-ctm.c  (+53 more)
src/cairo/cairo/util/: .MySCMServerInfo  Makefile.am  Makefile.in  cairo.modules  trace-to-xml.c
src/opencflite/: .MySCMServerInfo  BuildCFLite.windows  CFApplicationPreferences.c  CFArray.c  CFArray.h  CFBag.c  CFBag.h  CFBase.c  CFBase.h  CFBasicHash.c  CFBasicHash.h  CFBasicHash.m  CFBigNumber.c  CFBinaryHeap.c  CFBinaryHeap.h  CFBinaryPList.c  CFBitVector.c  CFBitVector.h  CFBuiltinConverters.c  CFBundle.c  CFBundle.h  CFBundlePriv.h  CFBundle_BinaryTypes.h  CFBundle_Internal.h  CFBundle_Resources.c  CFBurstTrie.c  CFByteOrder.h  CFCalendar.c  CFCalendar.h  CFCharacterSet.c  CFCharacterSet.h  CFCharacterSetPriv.h  CFConcreteStreams.c  CFData.c  CFData.h  CFDate.c  CFDate.h  CFDateFormatter.c  CFDateFormatter.h  CFDictionary.c  (+121 more)
src/opencflite/Cocotron/: .MySCMServerInfo  Cocotron.c
src/opencflite/Cocotron/CoreFoundation.xcodeproj/: .MySCMServerInfo  project.pbxproj
src/opencflite/XCode_Configs/: .MySCMServerInfo  ConfigDebug.xcconfig  ConfigRelease.xcconfig  Config_Master.xcconfig
src/opencflite/compat/: .MySCMServerInfo  Makefile.am  Makefile.in  dirent.c  dirent.h  gettimeofday.c  strlcat.c  strlcpy.c
src/opencflite/config/: .MySCMServerInfo
src/opencflite/examples/: .MySCMServerInfo  Makefile.am  Makefile.in
src/opencflite/examples/Allocator/: .MySCMServerInfo  Allocator.vcproj  Allocator.vcxproj  AllocatorExample.c  Allocator_vs2005.vcproj  Makefile.am  Makefile.in
src/opencflite/examples/BundleExample/: .MySCMServerInfo  BundleExample.c  BundleExample.vcproj  BundleExample_vs2005.vcproj  Makefile.am  Makefile.in
src/opencflite/examples/CFLocalServer/: .MySCMServerInfo  Client.c  Common.c  Common.h  Makefile.am  Makefile.in  Protocol.h  README  Server.c
src/opencflite/examples/CFMessagePort/: .MySCMServerInfo  Makefile.am  Makefile.in  client.c  server.c
src/opencflite/examples/CFRunLoopTimerExample/: .MySCMServerInfo  CFRunLoopTimerExample.c  CFRunLoopTimerExample.vcproj  CFRunLoopTimerExample.vcxproj  CFRunLoopTimerExample.vcxproj.filters  CFRunLoopTimerExample_vs2005.vcproj  Makefile.am  Makefile.in
src/opencflite/examples/CFTest/: .MySCMServerInfo  Chiquitita.xml  Makefile.am  Makefile.in  test.xml
src/opencflite/include/: .MySCMServerInfo  ConditionalMacros.h  Makefile.am  Makefile.in  config.h.in
src/opencflite/m4/: .MySCMServerInfo  acinclude.m4
src/opencflite/objc4/: .MySCMServerInfo  objc.sln  objc.vcproj  objc.vcxproj  objc.vcxproj.filters  objc_vs2005.vcproj  prebuild.bat
src/opencflite/tests/: .MySCMServerInfo  Make_win32.bat  Makefile.am  Makefile.in  date_test.c
src/opencflite/windows/: .MySCMServerInfo  CFLiteLib.vcproj  CFLiteLib.vcxproj  CFLiteLib.vcxproj.filters  CFLiteLib_vs2005.vcproj  CFLiteLib_vs2005.vcxproj.filters
(+3285 files in other folders)
